Corrected File name + Alignment of Task Summary Container

--- a/src/components/MainCircle/LeftSideHelper/classCode.css
+++ b/src/components/MainCircle/LeftSideHelper/classCode.css
@@ -11,6 +11,7 @@
     flex-direction: column;
     gap: 7px;
     width: 170px;
+    margin-bottom: 20px;
     position: relative;
 }
 
