--- a/src/components/MainCircle/LeftSideHelper/taskSummary.css
+++ b/src/components/MainCircle/LeftSideHelper/taskSummary.css
@@ -6,8 +6,6 @@
     font-family: 'Roboto', sans-serif;
     width: 170px;
     height: max-content;
-    margin-top: 20px;
-    /* margin-bottom: 20px; */
 }
 
 .task-summary-header {
